--- a/package.json
+++ b/package.json
@@ -13,5 +13,18 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.15"
-  }
+  },
+  "main": "app.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/guada-tulian/prueba1.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/guada-tulian/prueba1/issues"
+  },
+  "homepage": "https://github.com/guada-tulian/prueba1#readme",
+  "description": ""
 }
