instalamos dep mysql, util y md5 - bd.js - model

--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ SMTP_PORT=2525
 SMTP_USER=2e50e123a60670
 SMTP_PASS=1acb3a385a8dbc
 
+MYSQL_HOST=localhost
+MYSQL_DB_NAME=apuravoz
+MYSQL_USER=root
+MYSQL_PASSWORD=
